--- a/Sass/_hodDesk.scss
+++ b/Sass/_hodDesk.scss
@@ -3,20 +3,26 @@
 
     &_column {
         position: relative;
-        flex: 1;
-        flex-direction: column;
+        flex-direction: row;
         flex-basis: 100%;
-
+        align-content: center;
+        justify-content: space-around;
+        display:flex;
+        width:98%;
+        height:45%;
+        
         &_1 {
-            width: 40%;
+            width: 20%;
             float: left;
             padding: 10px 10px;
+            border:2px solid black;
         }
 
         &_2 {
-            width: 60%;
+            width: 50%;
             float: right;
             padding: 10px 10px;
+            border:2px solid black;
         }
     }
 
